src/tests/testfiles/const/4.txt
testfiles/const/4.c:8:5: error: cannot assign to variable 'aa' with const-qualified type
aa = &a;
^
